# engarde

./: README.md  Setup.md  client-wizard.sh  vps-wizard.sh
.github/workflows/: build.yml
Docs/: Setup.md
Go/: engarde.yml.sample
Go/cmd/engarde-client/: udpconn.go  udpconn_bindtodevice.go  webserver.go
Go/cmd/engarde-server/: webserver.go
Go/webmanager/: proxy.conf.json
Go/webmanager/src/app/: app.component.css
Go/webmanager/src/app/pipes/: sortby.pipe.ts
Owrt app Source/: temp.txt
Owrt app Source/luci-app-engarde-easyconf/: Makefile
Owrt app Source/luci-app-engarde-easyconf/luasrc/controller/engardeconf/: engardeconf.lua
Owrt app Source/luci-app-engarde-easyconf/luasrc/model/cbi/engardeconf/: engardeconf.lua
Owrt app Source/luci-app-engarde-easyconf/luasrc/view/engardeconf/: guidehelp.htm
Owrt app Source/luci-app-engarde-easyconf/root/etc/config/: engardeconf
Owrt app Source/luci-app-engarde-easyconf/root/etc/init.d/: engardeconf
Owrt app Source/luci-app-engarde-easyconf/root/etc/uci-defaults/: 50-luci-engardeconf
Owrt app Source/luci-app-engarde-easyconf/root/usr/share/rpcd/acl.d/: luci-app-engarde-easyconf.json
Rust/Client/: Cargo.toml
Rust/Client/src/: main.rs
Rust/Client/src/scheduler/: mod.rs
Rust/Server/: Cargo.toml
Rust/Server/src/: main.rs
