[package]
name = "engarde_server"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
warp = "0.3"
log = "0.4"
env_logger = "0.9"
rust-embed = "6.4.0"
mime_guess = "2.0"
futures = "0.3"
